<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity"
    android:background="@color/light_yellow">


    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="160dp"
        android:text="@string/results"
        android:textColor="@color/cream_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/see_below_the_result_of_your_bill"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_total_table_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_table"
        android:textColor="@color/dark_purple"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <TextView
        android:id="@+id/tv_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_table_label"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        tools:text="R$250"
        android:textColor="@color/dark_purple"/>

    <TextView
        android:id="@+id/tv_num_people_label"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="20sp"
        android:textColor="@color/dark_purple"
        app:layout_constraintStart_toStartOf="@+id/tv_total_table_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_table_label" />


    <TextView
        android:id="@+id/tv_num_people_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_people_label"
        tools:text="5" />

    <TextView
        android:id="@+id/tv_num_percentage_label"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_num_people_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_people_label" />


    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_percentage_label"
        tools:text="15%" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:outlineAmbientShadowColor="@color/yellowgold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_percentage_label" />

    <TextView
        android:id="@+id/tv_total_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/total"
        android:textColor="@color/cream_color"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/tv_num_percentage_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_percentage_label" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_amount_label"
        android:textSize="24sp"
        android:textColor="@color/dark_purple"
        android:maxLength="5"
        android:textStyle="bold"
        tools:text="57.50" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/refresh"
        android:textColor="@color/cream_color"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>